refatoracao em pastas

--- a/html-css-basico/formulario2.html
+++ b/html-css-basico/formulario2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
@@ -44,8 +44,7 @@
                 name="pagamento"
                 value="pix"
                 checked
-                required
-              />
+                required />
               Pix
               <input type="radio" name="pagamento" value="debito" />
               Débito
