--- a/html-css-basico/historiaWeb.html
+++ b/html-css-basico/historiaWeb.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
@@ -27,8 +27,7 @@
     <p>
       <a
         href="https://pt.wikipedia.org/wiki/Hist%C3%B3ria_da_Internet"
-        target="_blank"
-      >
+        target="_blank">
         Saiba mais
       </a>
     </p>
@@ -39,10 +38,17 @@
       src="https://www.youtube.com/embed/Gu_L8MPvGJM?si=dZBkFKruAE_YDM_Y"
       title="YouTube video player"
       frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allow="
+        accelerometer;
+        autoplay;
+        clipboard-write;
+        encrypted-media;
+        gyroscope;
+        picture-in-picture;
+        web-share;
+      "
       referrerpolicy="strict-origin-when-cross-origin"
-      allowfullscreen
-    ></iframe>
+      allowfullscreen></iframe>
     <figcaption>Russo codando muito em C</figcaption>
   </body>
 </html>
