--- a/html-css-basico/java.html
+++ b/html-css-basico/java.html
@@ -257,12 +257,12 @@ public static void main(String[] args){
           <h2 class="subtitulo">Considerações finais</h2>
           <p>
             Alguns programadores possuem receio ao trabalhar com a linguagem,
-            pensam que é um dinossauro corporativo e lento. Mas a realidade conta
-            outra história. A linguagem superou a provação do tempo e até hoje
-            continua nos topo dos rankings de linguagens. A orientação à objetos
-            pode assustar um pouco, mas ela contribui com o desenvolvimento de
-            grandes aplicações abstraindo grande parte da lógica deixando você
-            focar na regra de negócio.
+            pensam que é um dinossauro corporativo e lento. Mas a realidade
+            conta outra história. A linguagem superou a provação do tempo e até
+            hoje continua nos topo dos rankings de linguagens. A orientação à
+            objetos pode assustar um pouco, mas ela contribui com o
+            desenvolvimento de grandes aplicações abstraindo grande parte da
+            lógica deixando você focar na regra de negócio.
           </p>
         </div>
         <iframe
