--- a/html-css-basico/listaOrdenada.html
+++ b/html-css-basico/listaOrdenada.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
@@ -18,8 +18,7 @@
     <img
       src="https://www.w3schools.com/js/img_javascript_480.jpg"
       alt="logo js"
-      width="75"
-    />
+      width="75" />
     <img src="elephpant.png" alt="logo php" width="75" />
   </body>
 </html>
