--- a/html-css-basico/textCSS.html
+++ b/html-css-basico/textCSS.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
@@ -13,8 +13,7 @@
       color: rebeccapurple;
       font-size: 12pt;
       text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.314);
-    "
-  >
+    ">
     <h1 style="text-align: center">Dica de estudo para programação web</h1>
     <h2>Pratique todos os dias</h2>
     <p>
