atualiza link do portal (clone da uva)

--- a/bootstrap/portal.html
+++ b/bootstrap/portal.html
@@ -68,19 +68,15 @@
                     src="https://cdn-icons-png.flaticon.com/256/1384/1384060.png" />
                   <a
                     class="link-primary"
-                    href="https://www.youtube.com/watch?v=V1wKq-rWnu0"
-                    >Programando em C no Windows</a
-                  >
+                    href="https://www.youtube.com/watch?v=V1wKq-rWnu0">
+                    Programando em C no Windows
+                  </a>
                 </li>
                 <li class="list-group-item d-flex align-items-center">
                   <img
                     class="icon"
                     src="https://cdn-icons-png.flaticon.com/256/733/733554.png" />
-                  <a
-                    class="link-primary"
-                    href="https://www.youtube.com/watch?v=V1wKq-rWnu0"
-                    >Materiais de apoio</a
-                  >
+                  <a class="link-primary" href="#"> Materiais de apoio </a>
                 </li>
               </ul>
             </div>
