--- a/index.html
+++ b/index.html
@@ -4,9 +4,64 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Senac</title>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous" />
+
+    <!-- Font Awesome -->
+    <script
+      src="https://kit.fontawesome.com/2da055be12.js"
+      crossorigin="anonymous"></script>
   </head>
   <body>
-    <h1>Página 1</h1>
-    <p>publicada no github</p>
+    <main class="container">
+      <div class="card">
+        <div class="card-header">Programador Web 2026</div>
+        <div class="card-body">
+          <h5 class="card-text">Estudos em html e css (bootstrap)</h5>
+          <p class="card-text">Lista de Tópicos</p>
+        </div>
+        <ol class="list-group list-group-flush">
+          <li class="list-group-item">
+            <a href="html-css-basico/historiaWeb.html">historia web</a>
+          </li>
+          <li class="list-group-item">
+            <a href="html-css-basico/listaOrdenada.html">lista ordenada</a>
+          </li>
+          <li class="list-group-item">
+            <a href="html-css-basico/forumulario.html">forms</a>
+          </li>
+          <li class="list-group-item">
+            <a href="html-css-basico/formulario2.html">forms pt2</a>
+          </li>
+          <li class="list-group-item">
+            <a href="bootstrap/card.html">cards</a>
+          </li>
+          <li class="list-group-item">
+            <a href="bootstrap/carrossel.html">carousel</a>
+          </li>
+          <li class="list-group-item">
+            <a href="bootstrap/navbar.html">barra de navegação</a>
+          </li>
+          <li class="list-group-item">
+            <a href="bootstrap/table.html">tabelas</a>
+          </li>
+          <li class="list-group-item">
+            <a href="bootstrap/responvisvidade.html">responsividade</a>
+          </li>
+          <li class="list-group-item">
+            <a href="bootstrap/row.html">rows</a>
+          </li>
+        </ol>
+      </div>
+    </main>
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"></script>
   </body>
 </html>
