adiciona a pagina de medico

--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
                   Clone portal da uva
                 </a>
               </li>
+              <li class="list-group-item">
+                <a
+                  class="btn btn-primary"
+                  href="jocile/medical-healthcare.html">
+                  Página médica
+                </a>
+              </li>
             </ol>
           </div>
         </div>
